# PrimordialParticlesDemo

./: .dockerignore  .gitmodules  CMakeLists.txt
docker/: Dockerfile  build.sh  docker-compose.yaml  entrypoint.sh  spiral.c  spiral.py
include/: display.hpp  index.html  particles.hpp  zmq_http_server.hpp
src/: display.cpp  particles.cpp  sim_node.cpp  zmq_http_server.cpp
